--- a/style.css
+++ b/style.css
@@ -2,5 +2,33 @@
 
 body {
     font-family: Roboto, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
+
+.results {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.scores {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.player-info, .computer-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+
+
+
+
 
