--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
 /* style.css */
 
 body {
-    font-family: Roboto, sans-serif;
+    font-family: 'Courier New', monospace;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    background-color: rgb(215, 217, 232)
+}
+
+h1, h3 {
+    font-weight: lighter;
+}
+
+.header {
+    padding-top:50px;
+    text-align: center;
 }
 
 .results {
